--- a/AI/test/index.html
+++ b/AI/test/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>隨身家教</title>
-    <link rel="stylesheet" href="https://guidephy.github.io/AI/test/style.css">
+    <link rel="stylesheet" href="https://guidephy.github.io/AI/test2/style.css">
     <!-- 添加 Font Awesome 圖標 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -33,10 +33,7 @@
                     <i class="fas fa-history"></i>
                     我的學習記錄
                 </div>
-                <div class="menu-item" id="open-physics-lecture">
-                    <i class="fas fa-book"></i>
-                    物理講義
-                </div>
+               
                 <div class="menu-item" id="open-calculator">
                     <i class="fas fa-calculator"></i>
                     計算機
@@ -81,12 +78,13 @@
     </button>
     <button id="study-plan-button" class="modern-button secondary">
         <i class="fas fa-tasks"></i>
-        <span>學習計畫</span>
+        <span>專題計畫</span>
     </button>
-    <button id="generate-notes-button" class="modern-button secondary">
-        <i class="fas fa-sticky-note"></i>
-        <span>生成筆記</span>
-    </button>
+
+    <button id="generate-notes-button" class="modern-button note-button">
+    <i class="fas fa-sticky-note"></i>
+    <span>生成筆記</span>
+</button>
     <button id="return-to-chat-button" class="modern-button secondary" style="display:none;">
         <i class="fas fa-arrow-left"></i>
         <span>返回聊天</span>
@@ -237,7 +235,7 @@
                 <button id="showNextHintButton" class="modern-button secondary" style="display:none;">顯示下一提示</button>
             </div>
             <div id="reflectionArea" style="display: none;">
-                <h2 class="feature-title">學習反思</h2>
+               
                 <div id="reflectionContent"></div>
             </div>
         </div>
@@ -283,14 +281,8 @@
                 </div>
             </div>
 
-            <!-- 物理講義 -->
-<div class="external-content" id="physics-lecture-content" style="display: none;">
-    <div class="modern-container">
-        <div class="feature-container">
-            <iframe src="https://guidephy.github.io/guidephy/PhysicsForGSAT/tableOfContents.html"></iframe>
-        </div>
-    </div>
-</div>
+
+
 
 <!-- 計算機 -->
 <div class="external-content" id="calculator-content" style="display: none;">
@@ -319,157 +311,150 @@
                 </label>
                 <div id="image-preview-container" class="image-preview"></div>
                 <input type="text" id="user-input" class="form-input" placeholder="輸入訊息...">
+                <button id="image-upload-button" class="modern-button">+</button>
+    <input type="file" id="upload-image" accept="image/*" hidden>
                 <button id="send-button" class="modern-button primary">傳送</button>
             </div>
+            <div id="image-preview-container" class="image-preview"></div>
         </div>
     </div>
 
 <!-- 初始化全局變數 -->
-    <script>
-        // 宣告全域變數
-        let thread = []; // 儲存聊天記錄
-        const geminiurl = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key='; // 請替換為您的 Gemini API URL
-        let translationMode = false; // 是否為翻譯模式
+<!-- 初始化全局變數 -->
+<script>
+    // 宣告全域變數
+    let thread = []; // 儲存聊天記錄
+    const geminiurl = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=AIzaSyA2AoyuEsDitjNZvcxWoTfuNPOdQQ8hw68'; // 請替換為您的 Gemini API URL
+    let translationMode = false; // 是否為翻譯模式
 
-        // 格式化文字的函數
-        function formatText(text) {
-            let formatted = text;
-            formatted = formatted.replace(/\n/g, '<br>');
-            formatted = formatted.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
-            formatted = formatted.replace(/\*\*/g, '');
-            return formatted;
-        }
+    // 格式化文字的函數
+    function formatText(text) {
+        let formatted = text;
+        formatted = formatted.replace(/\n/g, '<br>');
+        formatted = formatted.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
+        formatted = formatted.replace(/\*\*/g, '');
+        return formatted;
+    }
 
-        document.addEventListener('DOMContentLoaded', () => {
-            // 獲取所有相關元素
-            const sidebar = document.getElementById('sidebar');
-            const menuToggle = document.getElementById('menu-toggle');
-            const overlay = document.getElementById('overlay');
-            const openAIGenerator = document.getElementById('open-ai-generator');
-            const openSolveProblem = document.getElementById('open-solve-problem');
-            const openMyRecords = document.getElementById('open-my-records');
-            const openPhysicsLecture = document.getElementById('open-physics-lecture');
-            const openCalculator = document.getElementById('open-calculator');
-            const openTomato = document.getElementById('open-tomato');
-            const returnChat = document.getElementById('return-chat');
-            const chatWindow = document.getElementById('chat-window');
-            const aiGeneratorContent = document.getElementById('ai-generator-content');
-            const solveProblemContent = document.getElementById('solve-problem-content');
-            const myRecordsContent = document.getElementById('my-records-content');
-            const physicsLectureContent = document.getElementById('physics-lecture-content');
-            const calculatorContent = document.getElementById('calculator-content');
-            const tomatoContent = document.getElementById('tomato-content');
-            const toolbar = document.getElementById('toolbar');
-            const input_area = document.querySelector('.input-area');
+    // 重要：将 aiGeneratorModule.init() 的调用移出toggleTool函数，避免重复初始化
+    document.addEventListener('DOMContentLoaded', () => {
+        // 獲取所有相關元素
+        const sidebar = document.getElementById('sidebar');
+        const menuToggle = document.getElementById('menu-toggle');
+        const overlay = document.getElementById('overlay');
+        const openAIGenerator = document.getElementById('open-ai-generator');
+        const openSolveProblem = document.getElementById('open-solve-problem');
+        const openMyRecords = document.getElementById('open-my-records');
+        const openCalculator = document.getElementById('open-calculator');
+        const openTomato = document.getElementById('open-tomato');
+        const returnChat = document.getElementById('return-chat');
+        const chatWindow = document.getElementById('chat-window');
+        const aiGeneratorContent = document.getElementById('ai-generator-content');
+        const solveProblemContent = document.getElementById('solve-problem-content');
+        const myRecordsContent = document.getElementById('my-records-content');
+        const calculatorContent = document.getElementById('calculator-content');
+        const tomatoContent = document.getElementById('tomato-content');
+        const toolbar = document.getElementById('toolbar');
+        const input_area = document.querySelector('.input-area');
 
-            // 側邊欄控制
-            menuToggle.addEventListener('click', (e) => {
-                e.stopPropagation();
-                sidebar.classList.toggle('show');
-                overlay.classList.toggle('show');
-            });
+        // 側邊欄控制
+        menuToggle.addEventListener('click', (e) => {
+            e.stopPropagation();
+            sidebar.classList.toggle('show');
+            overlay.classList.toggle('show');
+        });
 
-            overlay.addEventListener('click', () => {
-                sidebar.classList.remove('show');
-                overlay.classList.remove('show');
-            });
+        overlay.addEventListener('click', () => {
+            sidebar.classList.remove('show');
+            overlay.classList.remove('show');
+        });
 
-            document.addEventListener('click', (event) => {
-                if (!sidebar.contains(event.target) && !menuToggle.contains(event.target)) {
-                    sidebar.classList.remove('show');
-                    overlay.classList.remove('show');
-                }
-            });
-
-            // 工具切換函數
-            function toggleTool(tool) {
-                const tools = ['chat', 'ai-generator', 'solve-problem', 'my-records', 'physics-lecture', 'calculator', 'tomato'];
-                const contentElements = {
-                    'chat': chatWindow,
-                    'ai-generator': aiGeneratorContent,
-                    'solve-problem': solveProblemContent,
-                    'my-records': myRecordsContent,
-                    'physics-lecture': physicsLectureContent,
-                    'calculator': calculatorContent,
-                    'tomato': tomatoContent
-                };
-                const menuItems = {
-                    'chat': returnChat,
-                    'ai-generator': openAIGenerator,
-                    'solve-problem': openSolveProblem,
-                    'my-records': openMyRecords,
-                    'physics-lecture': openPhysicsLecture,
-                    'calculator': openCalculator,
-                    'tomato': openTomato
-                };
-
-                // 隱藏所有工具內容和顯示所有選單項目
-                tools.forEach(t => {
-                    if (contentElements[t]) contentElements[t].style.display = 'none';
-                    if (menuItems[t]) menuItems[t].classList.remove('hidden');
-                });
-
-                // 顯示選定的工具內容，並隱藏對應的選單項目
-                if (contentElements[tool]) {
-                    contentElements[tool].style.display = (tool === 'chat') ? 'flex' : 'block';
-                }
-                if (menuItems[tool]) menuItems[tool].classList.add('hidden');
-
-                // 根據是否為聊天模式調整輸入區域和工具列的顯示
-                input_area.style.display = (tool === 'chat') ? 'flex' : 'none';
-                toolbar.style.display = (tool === 'chat') ? 'flex' : 'none';
-
-                // 判斷是否為 iframe
-                if (tool === 'tomato') {
-                    tomatoContent.style.display = 'block';
-                    calculatorContent.style.display = 'none';
-                    physicsLectureContent.style.display = 'none';
-                } else if (tool === 'calculator') {
-                    calculatorContent.style.display = 'block';
-                    tomatoContent.style.display = 'none';
-                    physicsLectureContent.style.display = 'none';
-                } else if (tool === 'physics-lecture') {
-                    physicsLectureContent.style.display = 'block';
-                    tomatoContent.style.display = 'none';
-                    calculatorContent.style.display = 'none';
-                }
-
-                // 根據工具類型初始化相應模組
-                switch (tool) {
-                    case 'ai-generator':
-                        if (typeof aiGeneratorModule !== 'undefined') aiGeneratorModule.init();
-                        break;
-                    case 'solve-problem':
-                        if (typeof solveProblemModule !== 'undefined') solveProblemModule.init();
-                        break;
-                    case 'my-records':
-                        if (typeof myRecordsModule !== 'undefined') myRecordsModule.init();
-                        break;
-                }
-
-                // 隱藏側邊欄和遮罩
+        document.addEventListener('click', (event) => {
+            if (!sidebar.contains(event.target) && !menuToggle.contains(event.target)) {
                 sidebar.classList.remove('show');
                 overlay.classList.remove('show');
             }
-
-            // 綁定工具切換事件
-            openAIGenerator.addEventListener('click', () => toggleTool('ai-generator'));
-            openSolveProblem.addEventListener('click', () => toggleTool('solve-problem'));
-            openMyRecords.addEventListener('click', () => toggleTool('my-records'));
-            openPhysicsLecture.addEventListener('click', () => toggleTool('physics-lecture'));
-            openCalculator.addEventListener('click', () => toggleTool('calculator'));
-            openTomato.addEventListener('click', () => toggleTool('tomato'));
-            returnChat.addEventListener('click', () => toggleTool('chat'));
-
-            // 初始化聊天模組
-            if (typeof chatModule !== 'undefined') chatModule.init();
         });
-    </script>
 
-    <!-- 引入其他 JavaScript 檔案 -->
-    <script src="https://guidephy.github.io/AI/test/script-ai-generator.js"></script>
-    <script src="https://guidephy.github.io/AI/test/script-chat.js"></script>
-    <script src="https://guidephy.github.io/AI/test/script-solve-problem.js"></script>
-    <script src="https://guidephy.github.io/AI/test/script-my-records.js"></script>
-</body>
+        // 工具切換函數
+        function toggleTool(tool) {
+            const tools = ['chat', 'ai-generator', 'solve-problem', 'my-records', 'calculator', 'tomato'];
+            const contentElements = {
+                'chat': chatWindow,
+                'ai-generator': aiGeneratorContent,
+                'solve-problem': solveProblemContent,
+                'my-records': myRecordsContent,
+                'calculator': calculatorContent,
+                'tomato': tomatoContent
+            };
+            const menuItems = {
+                'chat': returnChat,
+                'ai-generator': openAIGenerator,
+                'solve-problem': openSolveProblem,
+                'my-records': openMyRecords,
+                'calculator': openCalculator,
+                'tomato': openTomato
+            };
+
+            // 隱藏所有工具內容和顯示所有選單項目
+            tools.forEach(t => {
+                if (contentElements[t]) contentElements[t].style.display = 'none';
+                if (menuItems[t]) menuItems[t].classList.remove('hidden');
+            });
+
+            // 顯示選定的工具內容
+            if (contentElements[tool]) {
+                contentElements[tool].style.display = (tool === 'chat') ? 'flex' : 'block';
+            }
+            if (menuItems[tool]) menuItems[tool].classList.add('hidden');
+
+            // 調整輸入區域和工具列的顯示
+            input_area.style.display = (tool === 'chat') ? 'flex' : 'none';
+            toolbar.style.display = (tool === 'chat') ? 'flex' : 'none';
+
+            // 判斷是否為 iframe
+            if (tool === 'tomato') {
+                tomatoContent.style.display = 'block';
+                calculatorContent.style.display = 'none';
+            } else if (tool === 'calculator') {
+                calculatorContent.style.display = 'block';
+                tomatoContent.style.display = 'none';
+            }
+
+            // 隱藏側邊欄和遮罩
+            sidebar.classList.remove('show');
+            overlay.classList.remove('show');
+        }
+
+        // 綁定工具切換事件
+        openAIGenerator.addEventListener('click', () => toggleTool('ai-generator'));
+        openSolveProblem.addEventListener('click', () => toggleTool('solve-problem'));
+        openMyRecords.addEventListener('click', () => toggleTool('my-records'));
+        openCalculator.addEventListener('click', () => toggleTool('calculator'));
+        openTomato.addEventListener('click', () => toggleTool('tomato'));
+        returnChat.addEventListener('click', () => toggleTool('chat'));
+
+        // 初始化所有模組
+        if (typeof chatModule !== 'undefined') chatModule.init();
+        if (typeof aiGeneratorModule !== 'undefined') aiGeneratorModule.init();
+        if (typeof solveProblemModule !== 'undefined') solveProblemModule.init();
+        if (typeof myRecordsModule !== 'undefined') myRecordsModule.init();
+
+        // 防止拖放時瀏覽器打開文件
+        document.addEventListener('dragover', (e) => {
+            e.preventDefault();
+        });
+
+        document.addEventListener('drop', (e) => {
+            e.preventDefault();
+        });
+    });
+</script>
+
+<!-- 引入其他 JavaScript 檔案 -->
+<script src="https://guidephy.github.io/AI/test/script-ai-generator.js"></script>
+<script src="https://guidephy.github.io/AI/test/script-chat.js"></script>
+<script src="https://guidephy.github.io/AI/test2/script-solve-problem.js"></script>
+<script src="https://guidephy.github.io/AI/test/script-my-records.js"></script>
+
 </html>
