--- a/AI/test/index.html
+++ b/AI/test/index.html
@@ -324,7 +324,7 @@
 <script>
     // 宣告全域變數
     let thread = []; // 儲存聊天記錄
-    const geminiurl = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=AIzaSyA2AoyuEsDitjNZvcxWoTfuNPOdQQ8hw68'; // 請替換為您的 Gemini API URL
+    const geminiurl = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key='; // 請替換為您的 Gemini API URL
     let translationMode = false; // 是否為翻譯模式
 
     // 格式化文字的函數
