--- a/physics.html
+++ b/physics.html
@@ -50,7 +50,7 @@
                   <a href="https://guidephy.github.io/vrguanyin/">VR遊觀音</a>
                   <a href="https://guidephy.github.io/EnergyTransition/">Planet713計畫</a>
                   <a href="https://guidephy.github.io/pond/">埤塘水資源</a>
-                  <a href="https://script.google.com/macros/s/AKfycbxV6_QP6OekIiHBcMvHSxrsu4v0uks8MZOPATAKWJzkM2C6Id5iKNgHRJqSmoISxc1EJA/exec">隨身家教</a>
+                  <a href="https://script.google.com/a/macros/gish.tyc.edu.tw/s/AKfycbyagXIot7xMFb5fQFWMEMUV1n2MV0wDu7mqc2gFyImO7qlwPg5ShRdbUDs9zc_qSo9A6Q/exec">隨身家教</a>
                 <a href="https://guidephy.github.io/111ceproject.html">碳捕捉暨Na循環發電IoT系統</a>
                    <a href="https://guidephy.github.io/grades.html">課堂計分</a>
                   <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
