--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                   <a href="https://guidephy.github.io/EnergyTransition/">Planet713計畫</a>
                   <a href="https://guidephy.github.io/pond/">埤塘水資源</a>
                   <a href="https://guidephy.github.io/internationalFriend/">國際好友遊觀音</a>
+                  <a href="https://script.google.com/a/macros/stu.gish.tyc.edu.tw/s/AKfycbwqbZCZ85vOXjynDA7bApL9B6u5MSIzguHILXkdVXKPp89Yt7h2OH_fZXylqi80eQ/exec">專題週誌管理</a>
                   <a href="https://guidephy.github.io/111ceproject.html">碳捕捉暨Na循環發電IoT系統</a>
-                  <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
                   <a href="https://guidephy.notion.site/Learn-to-Create-An-RPG-Game-In-Unity-Tutorial-Udemy-e1e79f20d692448b86fd4fc740aac94b?pvs=4">unity2D學習筆記</a>
                   <a href="https://guidephy.notion.site/Unity-Learning-d45d104ccbf34dcaa15c937affee7546">unity3D學習筆記</a>
                   <a href="https://script.google.com/macros/s/AKfycbz_xDFBSZdkg2tN1UVggM4unTJHVTlHwx5ZyJUXkOSNQYjYARGlcU2uWdiamssfx_HkOw/exec">化學AI出題系統</a>
