--- a/index.html
+++ b/index.html
@@ -47,11 +47,10 @@
           </li>
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction2()">線上題庫</a>
               <div class="dropdown-content" id="myDropdown2">
-                  <a href="phyhistorytest.html">物理史小測驗</a>
+                  <a href="https://script.google.com/macros/s/AKfycbzWwjJehoZ1IqgNnWNroO5sKuEDVnyaLnOle8GvYI_eDkhw37Xz2m-gHRCVdAKOKTC-/exec">物理史小測驗</a>
                   <a href="Competency.html">高中物理素養題</a>
-                  <a href="https://script.google.com/macros/s/AKfycbxWwm-35JI3U0SJcyzmgWc5C9_1h1N0FpEv6OTHmfEU4W27i7ZhttnhmULha_1oxTZj/exec">AI素養題產生器</a>
+                  <a href="https://script.google.com/macros/s/AKfycbyEp8Au3N-jP5suw_9Y43fRSRuCLUeApICyc0cQQhM94PA8CyGgKhp0hsfVyPy3r28y/exec">AI素養題產生器</a>
                   <a href="Ttest.html">國中技藝競賽題庫</a>
-                  <a href="https://script.google.com/macros/s/AKfycbwpg9WTq_V3R17w33JXzwPBdujZnoPJ4oJ1PTZnaMfvJEImyJVBUKfB19iJwTqEClM/exec">線上課堂小考</a>
                
               </div>
 
