--- a/physics.html
+++ b/physics.html
@@ -34,11 +34,9 @@
           </li>
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction2()">線上題庫</a>
               <div class="dropdown-content" id="myDropdown2">
-                  <a href="phyhistorytest.html">物理史小測驗</a>
+                  <a href="https://script.google.com/macros/s/AKfycbzWwjJehoZ1IqgNnWNroO5sKuEDVnyaLnOle8GvYI_eDkhw37Xz2m-gHRCVdAKOKTC-/exec">物理史小測驗</a>
                   <a href="Competency.html">高中物理素養題</a>
-                  <a href="AItest.html">AI素養題產生器</a>
-                  <a href="https://script.google.com/macros/s/AKfycbwVBfiZ-ulw-sc9frfi3Jf9JvOD1s1tkTwPUya2VEV4YrMEg1OmjM5n3rjCk49IrSpk/exec">教師小考出題</a>
-                  <a href="https://script.google.com/macros/s/AKfycbwpg9WTq_V3R17w33JXzwPBdujZnoPJ4oJ1PTZnaMfvJEImyJVBUKfB19iJwTqEClM/exec">線上課堂小考</a>
+                  <a href="https://script.google.com/macros/s/AKfycbyEp8Au3N-jP5suw_9Y43fRSRuCLUeApICyc0cQQhM94PA8CyGgKhp0hsfVyPy3r28y/exec">教師小考出題</a>
                
               </div>
 
