--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     src="https://www.canva.com/design/DAGhifqlQvc/vZiHpXi5JmpwRebpN7vNbQ/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
+<br><p>研習所需檔案</><a href="https://drive.google.com/drive/folders/1Q93NbDrKfQNcEqE3Y5Sm2tvlLiwx9dCe?usp=drive_link" target="_blank">連結</a>
 <br>
 
       
