--- a/physics.html
+++ b/physics.html
@@ -30,6 +30,7 @@
                   <a href="https://guidephy.github.io/guidephy/PhysicsForGSAT/CH4/Lesson1.html">高一物理-CH4電與磁的統一</a>
                   <a href="https://guidephy.github.io/guidephy/PhysicsForGSAT/CH5/Lesson1.html">高一物理-CH5能量</a>
                   <a href="https://guidephy.github.io/guidephy/PhysicsForGSAT/CH6/Lesson1.html">高一物理-CH6量子現象</a>
+                  <a href="https://guidephy.my.canva.site/">高二物理-CH5等速率圓周運動</a>
               </div>
           </li>
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction2()">線上題庫</a>
