--- a/CE/1.html
+++ b/CE/1.html
@@ -983,7 +983,7 @@
 
                 <div class="material-recycling">
                     <div class="material-item">
-                        <img src="placeholder_aluminum.png" alt="鋁罐圖片，代表鋁回收"> <!-- 請替換為實際圖片 -->
+                        <img src="https://pgw.udn.com.tw/gw/photo.php?u=https://uc.udn.com.tw/photo/2025/01/10/0/31249464.png" alt="鋁罐圖片，代表鋁回收"> <!-- 請替換為實際圖片 -->
                         <h3>鋁</h3>
                         <p>是目前最常被回收並再利用的材料之一。</p>
                         <ul>
@@ -992,7 +992,7 @@
                         </ul>
                     </div>
                     <div class="material-item">
-                         <img src="placeholder_glass.png" alt="玻璃瓶圖片，代表玻璃回收"> <!-- 請替換為實際圖片 -->
+                         <img src="https://40152013.weebly.com/uploads/1/9/5/9/19590661/1884790_orig.jpg" alt="玻璃瓶圖片，代表玻璃回收"> <!-- 請替換為實際圖片 -->
                         <h3>玻璃</h3>
                         <p>是另一個成功的回收案例。</p>
                          <ul>
@@ -1001,7 +1001,7 @@
                         </ul>
                     </div>
                     <div class="material-item">
-                         <img src="placeholder_paper.png" alt="紙張圖片，代表紙張回收"> <!-- 請替換為實際圖片 -->
+                         <img src="https://www.24528436.com.tw/templates/cache/10468/images/products/photooriginal-10468-256643.JPG" alt="紙張圖片，代表紙張回收"> <!-- 請替換為實際圖片 -->
                         <h3>紙張</h3>
                         <p>也是常見且可回收的材料。</p>
                          <ul>
