--- a/CE/1.html
+++ b/CE/1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>塑膠回收：一場精心策劃的「謊言」？ - 簡報模式</title>
+    <title>塑膠回收：一場精心策劃的「謊言」？</title>
         <style>
         /* --- START OF CSS --- */
         /* 基本重置與字體 */
