--- a/CE/1.html
+++ b/CE/1.html
@@ -1050,7 +1050,7 @@
         <!-- Footer 區 (Slide 7) - 作為最後一頁簡報 -->
          <section id="footer" class="section footer">
             <div class="container">
-                <p href="https://earthday.org.tw/archives/5529?utm_source=chatgpt.com">資料來源參考：塑膠回收是謊言。Earth Day Taiwan 台灣地球日。</p>
+                <p href="https://earthday.org.tw/archives/5529?utm_source=chatgpt.com">資料來源參考：勞倫·萊特卡普（Lauren Lightcap)。塑膠回收是謊言。Earth Day Taiwan 台灣地球日。</p>
                 <a href="https://earthday.org.tw/archives/5529?utm_source=chatgpt.com">連結</a>
                 <p>© 2025 桃園市立觀音高中</p>
                
