--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                   <a href="Competency.html">高中物理素養題</a>
                   <a href="https://script.google.com/macros/s/AKfycbyEp8Au3N-jP5suw_9Y43fRSRuCLUeApICyc0cQQhM94PA8CyGgKhp0hsfVyPy3r28y/exec">AI素養題產生器</a>
                   <a href="Ttest.html">國中技藝競賽題庫</a>
+                <a href="https://www.canva.com/design/DAFxbzfO__A/ESPki79zCox9KWSv5vS0Aw/view?utm_content=DAFxbzfO__A&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hfe3d2321f3">教卓教案分享</a>
+              
                
               </div>
 
