--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
+
   <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https://www.canva.com/design/DAGoeYnwI94/OF89PR-r-_wq6TbqoGIJKw/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
-  </iframe>
+    src="https://drive.google.com/file/d/1Es0R-DXGwLkht0O7tOkY41JoUKMvNv4m/preview" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
 </div>
 <br>
 <br>  
