--- a/physics.html
+++ b/physics.html
@@ -559,7 +559,7 @@
       <h3 class="sub-title">學習資源</h3>
       <ul class="sub-menu">
          <li><a href="https://drive.google.com/drive/folders/1C2_FuqEmGk-B84c1rZVpLKzp0a8Guxmb?usp=sharing">課程檔案</a></li>
-         <li><a href="https://drive.google.com/drive/folders/1CLp5TplsPyamIveePaoE0OGeD8pcKYU0?usp=sharing">高三複習卷</a></li>
+         <li><a href="https://guidephy.github.io/physicsReview.html">高三複習</a></li>
          <li><a href="https://guidephy.github.io/Ophysics">Guidephy物理自學</a></li>
          <li><a href="https://adl.edu.tw/HomePage/home/">因材網</a></li>
         
